--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "apollo-angular8",
+  "name": "offix-angular-demo",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -11,15 +11,27 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~7.2.0",
+    "@aerogear/voyager-client": "^2.5.0",
+    "@angular/animations": "^7.2.15",
+    "@angular/cdk": "^8.0.1",
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
-    "@angular/core": "~7.2.0",
+    "@angular/core": "^8.0.3",
     "@angular/forms": "~7.2.0",
+    "@angular/material": "^8.0.1",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "apollo-angular": "^1.6.0",
+    "apollo-angular-link-http": "^1.8.0",
+    "apollo-cache-inmemory": "^1.6.2",
+    "apollo-client": "^2.6.3",
+    "apollo-link": "^1.2.12",
+    "apollo-link-ws": "^1.0.18",
     "core-js": "^2.5.4",
+    "graphql": "^14.3.1",
+    "graphql-tag": "^2.10.1",
+    "offix-client": "^0.6.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
