--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,8 +15,9 @@
       "node_modules/@types"
     ],
     "lib": [
-      "es2018",
-      "dom"
+      "es2015",
+      "dom",
+      "esnext.asynciterable"
     ]
   }
 }
